image source fixed

--- a/_posts/BOJ/2021-07-26-number-1978.md
+++ b/_posts/BOJ/2021-07-26-number-1978.md
@@ -14,7 +14,7 @@ last_modified_at: 2021-07-26
 
 
 <p align="center">
-<img src="C:\Users\bjybs\Desktop\JP\bjybs123.github.io\assets\image\BOJ\1978\1.png">
+<img src="../../assets/image/BOJ/1978/1.png">
 </p>
 
 소수(prime number)를 찾는 문제이다.
